tests/Parse/test_1_r11.out
Error type A at Line 3: unknown lexeme 0x77G
Error type A at Line 4: unknown lexeme 0xCS
Error type A at Line 7: unknown lexeme '\x6u'
Error type A at Line 8: unknown lexeme '\x910'
