tests/Parse/test_1_r11.spl
int test_1_o01()
{
  int _wrong_hex_int_1 = 0x77G;
  int _wrong_hex_int_2 = 0xCS;
  int _right_hex_int = 0xdeadbeef;
  char _right_hex_char = '\xa0';
  char _wrong_hex_char_1 = '\x6u';
  char _wrong_hex_char_2 = '\x910';
}
